--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-<link rel="stylesheet" type="text/css" href="./bower_components/normalize.css/normalize.css">
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+	<link rel="stylesheet" type="text/css" href="./bower_components/normalize.css/normalize.css">
 <link rel="stylesheet" type="text/css" href="./bower_components/typeplate-starter-kit/css/typeplate.css">
 <script type="text/javascript" src="./bower_components/jquery-iconify/jquery.iconify.js"></script>
 <script type="text/javascript" src="./bower_components/jquery/dist/jquery.min.js"></script>
@@ -8,3 +12,9 @@
 <script type="text/javascript" src="./bower_components/jquery-iconify/jquery.iconify.js"></script>
 <script type="text/javascript" src="./bower_components/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="./bower_components/lodash/dist/lodash.min.js"></script>
+
+</head>
+<body>
+
+</body>
+</html>
