--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title></title>
-	<link rel="stylesheet" type="text/css" href="./bower_components/normalize.css/normalize.css">
-<link rel="stylesheet" type="text/css" href="./bower_components/typeplate-starter-kit/css/typeplate.css">
-<script type="text/javascript" src="./bower_components/jquery-iconify/jquery.iconify.js"></script>
-<script type="text/javascript" src="./bower_components/jquery/dist/jquery.min.js"></script>
-<script type="text/javascript" src="./bower_components/lodash/dist/lodash.min.js"></script>
-<link rel="stylesheet" type="text/css" href="./bower_components/normalize.css/normalize.css">
-<link rel="stylesheet" type="text/css" href="./bower_components/typeplate-starter-kit/css/typeplate.css">
-<script type="text/javascript" src="./bower_components/jquery-iconify/jquery.iconify.js"></script>
-<script type="text/javascript" src="./bower_components/jquery/dist/jquery.min.js"></script>
-<script type="text/javascript" src="./bower_components/lodash/dist/lodash.min.js"></script>
+    <title></title>
+    <link rel="stylesheet" type="text/css" href="./bower_components/normalize.css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="./bower_components/typeplate-starter-kit/css/typeplate.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
+
+
 
 </head>
-<body>
 
+<body>
+    <script type="text/javascript" src="./bower_components/jquery-iconify/jquery.iconify.js"></script>
+    <script type="text/javascript" src="./bower_components/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="./bower_components/lodash/dist/lodash.min.js"></script>
 </body>
+
 </html>
