--- a/index.html
+++ b/index.html
@@ -5,16 +5,23 @@
     <title></title>
     <link rel="stylesheet" type="text/css" href="./bower_components/normalize.css/normalize.css">
     <link rel="stylesheet" type="text/css" href="./bower_components/typeplate-starter-kit/css/typeplate.css">
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="./dist/style.css">
 
 
 
 </head>
 
 <body>
+    <ul class="flex-container">
+        <li class="flex-item-left"></li>
+        <li class="flex-item-right"></li>
+    </ul>
+      
+
     <script type="text/javascript" src="./bower_components/jquery-iconify/jquery.iconify.js"></script>
     <script type="text/javascript" src="./bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="./bower_components/lodash/dist/lodash.min.js"></script>
+    <script type="text/javascript" src="./js/app.js"></script>
 </body>
 
 </html>
